# HiddenMarkovModel

./: CMakeLists.txt  README.md  hw4.cpp
